--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,5 @@
 <h1>{{title}}</h1>
 <hr>
-
-<h3>Contador: {{counter}}</h3>
-
-<button (click)="increase(1)">+1</button>
-<button (click)="increase(-1)">-1</button>
-<button (click)="reset">reset</button>
+<hr>
+<app-counter></app-counter>
+<hr>
