--- a/src/app/heroes/hero/hero.component.html
+++ b/src/app/heroes/hero/hero.component.html
@@ -1,38 +1,27 @@
 <div>
-    <h3>{{heroeName}}</h3>
+    <h3>{{heroeSelected.supername}}</h3>
     <hr>
-<div>
-    <span>Nombre Real: </span>
-    <span>{{realName}}</span>
-</div>
 
-<div>
-    <span>Edad: </span>
-    <span>{{age}}</span>
-</div>
+    <div>
+        <span>Nombre Real: </span>
+        <span>{{heroeSelected.realname}}</span>
+    </div>
 
-<div>
-    <span>Pais: </span>
-    <span>{{country}}</span>
-</div>
+    <div>
+        <span>Edad: </span>
+        <span>{{heroeSelected.age}}</span>
+    </div>
 
-<div>
-    <span>Nombre mayuscula: </span>
-    <span>{{nameUppercase}}</span>
-</div>
+    <div>
+        <span>Pais: </span>
+        <span>{{heroeSelected.country}}</span>
+    </div>
 
-<div>
-    <span>Alguna funcion: </span>
-    <span>{{anyFunction ()}}</span>
-</div>
-<br>
-<button *ngIf="heroeName ==='Spiderman'"
- (click)="changeHeroe()" type="button" class="btn btn-primary">Cambiar heroe</button>
 </div>
 
 <ul class="list-group pt-4">
     <li *ngFor="let heroe of heroes" class="list-group-item">
-        {{heroe}}
-        <button type="button" (click)="changeHeroList(heroe)" class="btn btn-outline-warning">Ver</button>
+        {{heroe.supername}}
+        <button type="button" (click)="changeHero(heroe)" class="btn btn-outline-warning">Ver</button>
     </li>
   </ul>
